Автоматизация сборки личного проекта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -55,6 +55,9 @@
             <li class="gallery__item photo-card photo-card--first">
               <a class="photo-card__link" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-non-native-spaces-desktop.webp 1x, img/gallery/photo-non-native-spaces-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-non-native-spaces-tablet.webp 1x, img/gallery/photo-non-native-spaces-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/gallery/photo-non-native-spaces.webp 1x, img/gallery/photo-non-native-spaces@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/gallery/photo-non-native-spaces-desktop.jpg 1x, img/gallery/photo-non-native-spaces-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/gallery/photo-non-native-spaces-tablet.jpg 1x, img/gallery/photo-non-native-spaces-tablet@2x.jpg 2x">
                   <img class="photo-card__image"   src="img/gallery/photo-non-native-spaces.jpg" srcset="img/gallery/photo-non-native-spaces@2x.jpg 2x" alt="Красочная дорога в город на фоне заката" width="280" height="280">
@@ -76,6 +79,9 @@
             <li class="gallery__item photo-card">
               <a class="photo-card__link" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-local-vegetation-desktop.webp 1x, img/gallery/photo-local-vegetation-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-local-vegetation-tablet.webp 1x, img/gallery/photo-local-vegetation-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/gallery/photo-local-vegetation.webp 1x, img/gallery/photo-local-vegetation@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/gallery/photo-local-vegetation-desktop.jpg 1x, img/gallery/photo-local-vegetation-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/gallery/photo-local-vegetation-tablet.jpg 1x, img/gallery/photo-local-vegetation-tablet@2x.jpg 2x">
                   <img class="photo-card__image"   src="img/gallery/photo-local-vegetation.jpg" srcset="img/gallery/photo-local-vegetation@2x.jpg 2x" alt="Кактус с желтыми соцветиями" width="280" height="280">
@@ -97,6 +103,9 @@
             <li class="gallery__item photo-card gallery__item--dark">
               <a class="photo-card__link" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-road-north-desktop.webp 1x, img/gallery/photo-road-north-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-road-north-tablet.webp 1x, img/gallery/photo-road-north-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/gallery/photo-road-north.webp 1x, img/gallery/photo-road-north@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/gallery/photo-road-north-desktop.jpg 1x, img/gallery/photo-road-north-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/gallery/photo-road-north-tablet.jpg 1x, img/gallery/photo-road-north-tablet@2x.jpg 2x">
                   <img class="photo-card__image"   src="img/gallery/photo-road-north.jpg" srcset="img/gallery/photo-road-north@2x.jpg 2x"  alt="Извилистая дорога по горе на Север" width="280" height="280">
@@ -118,6 +127,9 @@
             <li class="gallery__item photo-card">
               <a class="photo-card__link" href="#">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-devils-bridge-desktop.webp 1x, img/gallery/photo-devils-bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-devils-bridge-tablet.webp 1x, img/gallery/photo-devils-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/gallery/photo-devils-bridge.webp 1x, img/gallery/photo-devils-bridge@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/gallery/photo-devils-bridge-desktop.jpg 1x, img/gallery/photo-devils-bridge-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/gallery/photo-devils-bridge-tablet.jpg 1x, img/gallery/photo-devils-bridge-tablet@2x.jpg 2x">
                   <img class="photo-card__image"   src="img/gallery/photo-devils-bridge.jpg" srcset="img/gallery/photo-devils-bridge@2x.jpg 2x" alt="Вид на мост дьявола" width="280" height="280">
@@ -148,6 +160,9 @@
           </div>
           <div class="video__item">
             <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/video/video-desktop.webp 1x, img/video/video-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/video/video-tablet.webp 1x, img/video/video-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/video/video.webp 1x, img/video/video@2x.webp 2x">
               <source media="(min-width: 1200px)" srcset="img/video/video-desktop.jpg 1x, img/video/video-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/video/video-tablet.jpg 1x, img/video/video-tablet@2x.jpg 2x">
               <img class="video__img"   src="img/video/video.jpg" srcset="img/video/video@2x.jpg 2x" alt="Видео путешествие по городку Седоны" width="280" height="177">
