--- a/source/index.html
+++ b/source/index.html
@@ -142,8 +142,10 @@
         <h2 class="visually-hidden">Седона на карте</h2>
         <div class="map__image map__image--nojs">
           <picture>
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/map/map-desktop.webp 1x, img/map/map-desktop@2x.webp 2x">
+            <source type="image/webp" srcset="img/map/map.webp 1x, img/map/map@2x.webp 2x">
             <source media="(min-width: 1200px)" srcset="img/map/map-desktop.jpg 1x, img/map/map-desktop@2x.jpg 2x">
-            <img class="map__photo" src="img/map/map-tablet.jpg" srcset="img/map/map-tablet@2x.jpg 2x" width="320" height="350" alt="Седона на карте">
+            <img class="map__photo" src="img/map/map.jpg" srcset="img/map/map@2x.jpg 2x" width="320" height="350" alt="Седона на карте">
           </picture>
         </div>
         <div class="map__frame map__frame--nojs">
