--- a/source/form.html
+++ b/source/form.html
@@ -193,7 +193,7 @@
       <div class="notification__wrapper">
           <div class="notification__text-block">
             <p class="notification__title">Ваш отзыв отправлен!</p>
-            <p class="notification__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. <span class="no-wrap">В ближайшее</span> время мы опубликуем его на сайте.</p>
+            <p class="notification__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В&nbsp;ближайшее время мы опубликуем его на сайте.</p>
             <div class="notification__button-wrapper">
               <button class="notification__button button" type="button">Закрыть окно</button>
             </div>
